--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="전국 공공도서관 열람실 현황을 확인할 수 있는 서비스입니다.">
+    <meta name="keywords" content="전국, 공공도서관, 도서관, 열람실, 좌석, 실시간, 현황">
+    <meta property="og:site_name" content="전국 공공도서관 열람실 현황">
     <title>전국 공공도서관 열람실 현황</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=hgte1ya8vs"></script>
