for detail info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:site_name" content="전국 공공도서관 열람실 현황">
     <title>전국 공공도서관 열람실 현황</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=hgte1ya8vs"></script>
 </head>
 <body>
