--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <div id="map"></div>
     </div>
     <div id="status"></div>
+    <div id="modal-container" class="hidden">
+        <div id="modal-content">
+            <span id="modal-close">&times;</span>
+            <iframe id="seat-map-frame" src="" frameborder="0"></iframe>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
