--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="전국 공공도서관 열람실 현황을 확인할 수 있는 서비스입니다.">
+    <meta property="og:title" content="전국 공공도서관 열람실 현황">
+    <meta property="og:description" content="전국 공공도서관의 실시간 좌석 현황을 확인하세요. 지역별 도서관 검색 및 지도 제공.">
+    <meta property="og:url" content="https://opendata-plr.vercel.app/">    
     <meta name="keywords" content="전국, 공공도서관, 도서관, 열람실, 좌석, 실시간, 현황">
     <meta property="og:site_name" content="전국 공공도서관 열람실 현황">
     <title>전국 공공도서관 열람실 현황</title>
