--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta property="og:title" content="전국 공공도서관 열람실 현황">
+    <meta name="title" property="og:title" content="전국 공공도서관 열람실 현황"/>
     <meta property="og:description" content="전국 공공도서관의 실시간 좌석 현황을 확인하세요. 지역별 도서관 검색 및 지도 제공.">
     <meta property="og:url" content="https://opendata-plr.vercel.app/">    
     <meta name="keywords" content="전국, 공공도서관, 도서관, 열람실, 좌석, 실시간, 현황">
