--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <meta property="og:site_name" content="전국 공공도서관 열람실 현황">
     
     <!-- 중요하지 않은 리소스들은 defer로 지연 로드 -->
-    <script async defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5020907728147444" crossorigin="anonymous"></script>
-    <script async defer src="https://www.googletagmanager.com/gtag/js?id=G-930VGD9QPS"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5020907728147444" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-930VGD9QPS"></script>
     
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
