--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
   gtag('config', 'G-930VGD9QPS');
 </script>
 <body>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5020907728147444"
+     crossorigin="anonymous"></script>
+    <!-- 수평형광고 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5020907728147444"
+         data-ad-slot="8087930817"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    
     <!-- Mobile Top Search Header (Mobile Only) -->
     <div class="mobile-search-header">
         <div class="mobile-search-container">
